On branch master Changes to be committed: 	modified:   index.html 	modified:   style.css   added popular posts section and contact us form

--- a/index.html
+++ b/index.html
@@ -128,8 +128,47 @@
           </div>
         </div>
       </section>
+      <!-- end of blog section -->
+
+      <div class="popular-posts-container">
+        <h2>Popular Posts</h2>
+
+        <div class="popular-posts">
+          <div class="popular-post">
+            <div class="thumbnail">
+              <img src="images/popular-post1.jpg" alt="image">
+              <h3 class="title">The Post Title</h3>
+            </div>
+          </div>
+
+          <div class="popular-post">
+            <div class="thumbnail">
+              <img src="images/popular-post2.jpg" alt="image">
+              <h3 class="title">The Post Title</h3>
+            </div>
+          </div>
+
+          <div class="popular-post">
+            <div class="thumbnail">
+              <img src="images/popular-post3.jpg" alt="image">
+              <h3 class="title">The Post Title</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end of popular post section -->
+
+      <div class="contact-container">
+        <h2>Contact Us</h2>
+
+        <form action="">
+          <input type="text" placeholder="Full Name">
+          <input type="text" placeholder="Email">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+          <input type="submit" value="Send">
+        </form>
+      </div>
     </div>
-    <!-- end of blog section -->
-    
+
   </body>
 </html>
