--- a/index.html
+++ b/index.html
@@ -169,6 +169,59 @@
         </form>
       </div>
     </div>
+    <!-- end of contact section -->
+
+    <footer>
+      <div class="wrapper">
+        <div class="footer-container">
+          <div class="footer-left">
+            <img src="images/logo.png" alt="logo">
+          </div>
+
+          <div class="footer-center">
+            <h4 class="list-title">Quick Links</h4>
+
+            <ul>
+              <li>
+                <a href="#">Home</a>
+              </li>
+
+              <li>
+                <a href="#">About</a>
+              </li>
+              
+              <li>
+                <a href="#">Contact</a>
+              </li>
+
+              <li>
+                <a href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-right">
+            <h4 class="list-title">Follow us on</h4>
+
+            <div class="social-icons">
+              <a href="#">
+                <img src="images/instagram-logo.png" alt="instagram">
+              </a>
+
+              <a href="#">
+                <img src="images/facebook-logo.png" alt="facebook">
+              </a>
+
+              <a href="#">
+                <img src="images/twitter-logo.png" alt="twitter">
+              </a>
+            </div>
+
+            <p>This website is developed by case2 &copy; 2023</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
