On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.html
	modified:   main.js
	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta author="HKD">
     <title>Blogger theme 0</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
   </head>
 
   <body>
@@ -38,6 +37,13 @@
 
         <div class="search-icon">
           <img src="images/search-icon.png" alt="search icon">
+        </div>
+
+        <div class="search-container">
+          <div class="blog-search">
+            <input type="text">
+            <input type="submit" value="Search">
+          </div>
         </div>
       </div>
     </div>
@@ -81,6 +87,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore a officia nam, quo dolores eius enim eum quia itaque consequuntur unde porro accusamus eveniet sunt placeat nobis eaque soluta asperiores omnis dolore nemo minus culpa dolorum! Sint voluptas similique cupiditate!</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <div class="read-more-container">
+              <a href="#" class="read-more">Read More</a>
+            </div>
           </div>
         </div>
 
@@ -103,6 +115,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore a officia nam, quo dolores eius enim eum quia itaque consequuntur unde porro accusamus eveniet sunt placeat nobis eaque soluta asperiores omnis dolore nemo minus culpa dolorum! Sint voluptas similique cupiditate!</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <div class="read-more-container">
+              <a href="#" class="read-more">Read More</a>
+            </div>
           </div>
         </div>
 
@@ -125,6 +143,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore a officia nam, quo dolores eius enim eum quia itaque consequuntur unde porro accusamus eveniet sunt placeat nobis eaque soluta asperiores omnis dolore nemo minus culpa dolorum! Sint voluptas similique cupiditate!</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos ex neque facilis inventore eveniet eaque illo, quas molestias tempora.</p>
+
+            <div class="read-more-container">
+              <a href="#" class="read-more">Read More</a>
+            </div>
           </div>
         </div>
       </section>
@@ -223,5 +247,6 @@
       </div>
     </footer>
 
+    <script src="main.js"></script>
   </body>
 </html>
