On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.html
	modified:   main.js
	modified:   style.css
added mobile responsiveness and mobile navigation menu

--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
           <img src="images/search-icon.png" alt="search icon">
         </div>
 
+        <div class="mobile-menu-icon">
+          <img src="images/menu-icon.png" alt="menu icon">
+        </div>
+
+        <div class="mobile-menu-container">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu-close-icon">
+          <img src="images/close-icon.png" alt="menu close icon">
+        </div>
+
         <div class="search-container">
           <div class="blog-search">
             <input type="text">
